--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "browser-sync": "^2.24.4",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^2.0.4",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.3.0",
     "gulp-svg-sprite": "^1.4.0",
+    "gulp-svg2png": "^0.3.0",
     "gulp-watch": "^5.0.0",
     "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
